<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">区退管办移动OA</string>

    <string name="hello_world">Hello world!</string>
    <string name="fwzc_name">区退管办移动OA</string>
    <string name="menu_about">About1</string>
    <string name="menu_developer_mode">Developer Mode</string>
    <string name="menu_switch_theme">Switch theme</string>

    <string name="menu_txxxdetail_rz">认  证</string>

    <string name="title_activity_about">About2</string>
    <string name="about_txt_description">昆明市区企业退休人员管理办公室移动OA</string>
    <string name="about_txt_fwzc">由昆明英信科技有限公司全程支持</string>
    <string name="about_txt_fwzcwz">昆明英信科技有限公司网站</string>
    <string name="about_txt_github">Github</string>
    <string name="about_txt_licenses">Licenses</string>

    <string name="title_activity_developer_mode">Developer Mode</string>

    <string name="title_activity_licenses">Licenses</string>
    <string name="licenses_txt_butterknife">Butterknife</string>
    <string name="licenses_txt_butterknife_licence">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\nSee the License for the specific language governing permissions and limitations under the License.</string>

    <!--   <string name="menu_about">About</string>
       <string name="menu_developer_mode">Developer Mode</string>
       <string name="menu_switch_theme">Switch theme</string>

       <string name="title_activity_about">About</string>
       <string name="about_txt_description">Implementation of Google Material Design Text fields</string>
       <string name="about_txt_github">Github</string>
       <string name="about_txt_licenses">Licenses</string>

       <string name="title_activity_developer_mode">Developer Mode</string>

       <string name="title_activity_licenses">Licenses</string>
       <string name="licenses_txt_butterknife">Butterknife</string>
       <string name="licenses_txt_butterknife_licence">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\nSee the License for the specific language governing permissions and limitations under the License.</string>
       <string name="app_name">区退管办移动OA</string>-->
    <string name="action_settings">Settings</string>
    <string name="action_about">abouts</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="title_mainmenuactivity"></string>
    <string name="title_eatlistactivity">就餐打卡</string>
    <string name="title_eattotalpersionactivity">个人统计</string>
    <string name="title_eattotaldetailactivity">就餐交费</string>
    <string name="title_eattotalActivity">合计</string>
    <string name="title_activity_tables_list">餐桌列表</string>
    <string name="title_activity_txxx">退休信息</string>
    <string name="title_activity_checkinout">打卡信息</string>
    <string name="title_activity_txxxdetail">详细信息</string>
    <string name="title_activity_ysry">遗属信息</string>
    <string name="title_activity_ysrydetail">遗属详细信息</string>
    <string name="title_activity_ysryadd">添加遗属信息</string>
    <string name="title_eataddactivity">就餐补打</string>
    <string name="title_eatdeletedetail">个人记录</string>
    <string name="title_eatall">就餐记录</string>
    <string name="title_activity_txxxdetailsearch">搜索结果</string>
    <string name="title_activity_mainv">MainvActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_all_tables">AllTablesActivity</string>
    <string name="title_activity_into_tables">IntoTablesActivity</string>
    <string name="title_activity_table_detailed">餐桌详情</string>
    <string name="title_activity_foods_list">FoodsListActivity</string>
    <string name="title_activity_foods_detailed">FoodsDetailedActivity</string>
    <string name="title_activity_food_list_tyep">FoodListTyepActivity</string>
    <string name="title_activity_foods_orders_list">FoodsOrdersListActivity</string>
    <string name="title_activity_settl_count">SettlCountActivity</string>
    <string name="title_activity_orders_list">OrdersListActivity</string>
    <string name="title_activity_eat_list">EatListActivity</string>
    <string name="title_activity_eat_total_list">EatTotalActivity</string>
    <string name="title_activity_eat_totalpersion_list">EatTotalPersionActivity</string>
    <string name="title_activity_eat_totaldetail_list">EatTotalDetailActivity</string>
    <string name="title_activity_txxx_list">TxxxListActivity</string>
    <string name="title_activity_txxx_detail_list">TxxxDetailActivity</string>
    <string name="title_aboutactivity_list">AboutActivity</string>

    <string name="test_no">登录失败</string>
    <string name="red_title">红色</string>
    <string name="blue_title">蓝色</string>
    <string name="green_title">绿色</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_item">普通菜单项</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    <string name="main_sy">首页</string>
    <string name="main_zhk">综合科</string>
    <string name="main_sbk">社保科</string>
    <string name="main_qt">其它</string>
    <string name="zhk_qj">请 　 假</string>
    <string name="zhk_yz">登记要车</string>
    <string name="zhk_bx">职工管理</string>
    <string name="zhk_dx">短信记录</string>
    <string name="main_fwk">服务科</string>
    <string name="fwk_dk">吃饭打卡</string>
    <string name="fwk_cx">个人统计</string>
    <string name="fwk_jl">就餐记录</string>
    <string name="fwk_hj">合计</string>
    <string name="sbk_tx">退休人员</string>
    <string name="sbk_ys">遗属人员</string>
    <string name="eat_name">姓名:</string>
    <string name="search_hint">姓名</string>
    <string name="app_label">标签</string>
    <string name="search_other">其它查询条件</string>
    <string name="search_send">发短信</string>
    <string name="xgmm">修改密码</string>
    <string name="pbsm">版本说明</string>
    <string name="jszc">技术支持</string>
    <string name="head">头像</string>
    <string name="num_hint">请输入账号</string>
    <string name="text_id">账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="text_password">密码</string>
    <string name="cb_autologin">自动登录</string>
    <string name="reg">退　出</string>
    <string name="login">登  录</string>
    <string name="back">返回</string>
    <string name="image">图片</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="set">设置</string>
    <string name="account">账户</string>
    <string name="exit">退出</string>
    <string name="repare">修  改</string>
    <string name="add">添  加</string>
    <string name="save">保  存</string>
    <string name="menu_delete">删　除</string>
    <string name="qingjia_detail">请假信息</string>
    <string name="menu_leader">部门签字</string>
    <string name="menu_leader1">分管签字</string>
    <string name="chuchai_detail">派车信息</string>
    <string name="chuchai_add">添加派车</string>
    <string name="checkinout_list">打卡记录</string>
    <!--<item name="LinearLayoutLoginForm" type="id"></item>-->
    <!--<item name="LinearLayoutHeader" type="id"></item>-->
    <!--<item name="headImg" type="id"></item>-->
    <!--<item name="inputQqId" type="id"></item>-->
    <!--<item name="inputpassWord" type="id"></item>-->
    <string name="title">标题</string>

    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_dialog_page">DialogPageActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
