<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
 >


    <item app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="collapseActionView|ifRoom|withText"
          android:icon="@drawable/ic_action_search"
          android:id="@+id/action_search"
          android:title="搜索/">

    </item>

    <item android:id="@+id/action_txxxdetail_mainrz"
        android:enabled="false"

          android:title="@string/menu_txxxdetail_rz"
          android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/Menu_Delete"
          android:title="@string/menu_delete"
          app:showAsAction="ifRoom"
          android:enabled="false"
        android:visible="false"

        />
    <item android:id="@+id/Menu_Leader"
        android:title="@string/menu_leader"
        app:showAsAction="ifRoom"

       android:visible="false"
        />

    <item android:id="@+id/search_other"
          android:title="@string/search_other"
          android:icon="@drawable/ic_action_info_outline"
          app:showAsAction="never"
          android:visible="false"
        />
    <item android:id="@+id/search_send"
          android:title="@string/search_send"
          android:icon="@drawable/ic_action_info_outline"
          app:showAsAction="never"
          android:visible="false"
        />
</menu>
