<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_view_cont"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingRight="8.0dip"
    android:paddingTop="4.0dip" >

    <LinearLayout
        android:id="@+id/popup_view"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:background="@drawable/popmenu_bg"
        android:orientation="vertical"
        android:paddingBottom="8.0dip"
        android:paddingLeft="2.0dip"
        android:paddingRight="2.0dip"
        android:paddingTop="16.0dip" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_item"
            android:clickable="true"
            android:drawablePadding="3.0dip"
            android:gravity="center_vertical"
            android:padding="7.0dip"
            android:text="@string/about"
            android:textColor="@color/popup_menu_text"
            android:textSize="18.0sp" />

        <TextView
            android:id="@id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_item"
            android:clickable="true"
            android:drawablePadding="3.0dip"
            android:gravity="center_vertical"
            android:padding="7.0dip"
            android:text="@string/head"
            android:textColor="@color/popup_menu_text"
            android:textSize="18.0sp" />

        <TextView
            android:id="@id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_item"
            android:clickable="true"
            android:drawablePadding="3.0dip"
            android:gravity="center_vertical"
            android:padding="7.0dip"
            android:text="@string/set"
            android:textColor="@color/popup_menu_text"
            android:textSize="18.0sp" />

        <TextView
            android:id="@id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_item"
            android:clickable="true"
            android:drawablePadding="3.0dip"
            android:gravity="center_vertical"
            android:padding="7.0dip"
            android:text="@string/exit"
            android:textColor="@color/popup_menu_text"
            android:textSize="18.0sp" />
    </LinearLayout>

</LinearLayout>