<com.zhy.android.percent.support.PercentRelativeLayout

   xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_main"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvMainUserName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:text="w:70%,h:20%"
        android:maxHeight="10dp"
        android:gravity="center"
        app:layout_heightPercent="5%"
        />
    <com.zhy.android.percent.support.PercentRelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="match_parent"

        android:background="#FFFFFF"
        android:gravity="center"
        android:layout_below="@+id/tvMainUserName"


        >


        <TextView
        android:id="@+id/tvUserDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
          style="@style/text_title"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="100dp"
        android:textColor="#000000"
         android:layout_alignParentTop="true"
        />
    <ListView
        android:id="@+id/lvSeletFoodsType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserDay"
        android:layout_alignParentStart="true"
        android:divider="#000000"
        android:dividerHeight="1px"
    />

    <TextView
        android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/text_title"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="100dp"

        android:textColor="#000000"

    android:layout_below="@+id/lvSeletFoodsType"

    />
    <ListView
    android:id="@+id/lv7DayBirthday"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView1"
    android:layout_alignParentStart="true"
    android:divider="#000000"
    android:dividerHeight="1px"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textColor="#000000"
    android:layout_gravity="center"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textView2"
    android:textSize="17dp"
        style="@style/text_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="100dp"
    android:textColor="#000000"
    android:layout_gravity="center"
    android:layout_below="@+id/lv7DayBirthday"

    />

    <ListView
    android:id="@+id/lvDydhBirthday"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView2"
    android:orientation="horizontal"

        />
</com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:text="width:100%,height:10%"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="100%"

        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:id="@+id/imageView2"
            android:src="@drawable/icon_laucher"
            android:layout_marginLeft="10dip"
             android:layout_marginTop="4dip"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/btn_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView2"
           android:textColor="#ffffff"
            android:text="@string/main_sy"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:textSize="18dp"
            />
        <TextView
        android:id="@+id/btn_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_title1"
            android:textColor="#ffffff"
        android:text="@string/main_zhk"
        android:gravity="center"
            android:textSize="18dp"
            android:layout_marginRight="15dp"
      />
        <TextView
            android:id="@+id/btn_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_title2"
            android:textColor="#ffffff"
            android:text="@string/main_sbk"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/btn_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_title3"
            android:textColor="#ffffff"
            android:text="@string/main_fwk"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/btn_title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_title4"
            android:textColor="#ffffff"
            android:text="@string/main_qt"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginRight="15dp"
            />

    </com.zhy.android.percent.support.PercentRelativeLayout>

 </com.zhy.android.percent.support.PercentRelativeLayout>
